# conduit

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  spec.md  vite.config.ts
.github/workflows/: release.yml  unit-tests.yml
docs/: pull_request_template.md
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  midi_engine.rs  models.rs  osc_engine.rs  router.rs  state.rs
src-tauri/src/commands/: config_io.rs  engine.rs  mappings.rs  midi.rs  mod.rs  settings.rs
src/components/: ActivityLog.tsx  ErrorBoundary.tsx  LogEntry.tsx  MappingRow.tsx  MappingTable.tsx  SettingsPanel.tsx
src/components/mapping/: CalibrationWizard.tsx  MidiInputFields.tsx  MidiOutputFields.tsx  OscInputFields.tsx  OscOutputFields.tsx  OscToOscFields.tsx  curveMath.ts
src/components/ui/: input.tsx  slider.tsx  validated-input.test.tsx  validated-input.tsx
src/hooks/: useActivityLog.ts  useEngine.ts  useMappings.ts  useMidi.ts  useSettings.ts
src/lib/: events.ts  midi.test.ts  midi.ts  validators.test.ts  validators.ts
