[package]
name = "conduit"
version = "0.1.0"
description = "OSC ↔ MIDI bridge application"
authors = ["sndwrks"]
edition = "2021"

[lib]
name = "conduit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
midir = "0.10"
rosc = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
tokio-util = { version = "0.7", features = ["codec"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-autostart = "2"
tauri-plugin-log = "2"
log = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
